--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,30 @@
-
-/*========================================
-01. Image css
-========================================*/
 body {
     margin:0;
+    padding: 0 1em;
+    text-align: center;
 }
 
-footer {
-    margin:0;
+.center-container {
+    width: 100%;
+    max-width: 530px;
+    margin: 0 auto;
+}
+
+.footer-container {
+    width: 100%;
+    max-width: 324px;
+    margin: 0 auto;
+}
+
+a, img {
+    display: inline-block;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+.row > * {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
